--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img class="his-logo" src="https://his.edu.dz/storage/2023/11/group-6.png" alt="HIS Logo">
     <h1 class="header-title">
       <img src="https://cdn-icons-png.flaticon.com/512/747/747376.png" width="30" style="vertical-align: middle; margin-right: 10px;">
-      gggggggggggggggggggg
+      Voici Mon Projet de Cloud
     </h1>
     <button id="darkModeToggle">🌙 Mode Sombre</button>
   </div>
