--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Menu à Onglets</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="script/script_css/style.css">
 </head>
 <body>
 
@@ -69,6 +69,6 @@
 </div>
 <div id="toast" class="toast">Appel REST simulé...</div>
 
-<script src="script.js"></script>
+<script src="script/script_js/script.js"></script>
 </body>
 </html>
